<resources>
    <string name="app_name">FIFA Station</string>

    <!-- activity_main.xml -->
    <string name="trending_players_header">Trending Players</string>
    <string name="popular_clubs_header">Popular Clubs</string>

    <!-- player_list_item.xml -->
    <string name="player_name_list">Jeremy Blum</string>
    <string name="club_nation_list">PSU | USA</string>
    <string name="rating_list">99</string>

    <!-- club_list_item.xml -->
    <string name="club_name_list">Penn State Soccer</string>
    <string name="league_list">NCAA Div III</string>

    <!-- top_app_bar.xml -->
    <string name="home_item">Home</string>
    <string name="players_item">Players</string>
    <string name="clubs_item">Clubs</string>
    <string name="favorite_item">Favorites</string>
    <string name="settings_item">Settings</string>
    <string name="system_label">System</string>

    <!-- fragment_search.xml -->
    <string name="player_name_header">Player Name</string>
    <string name="rating_header">Rating</string>
    <string name="club_label">Club</string>
    <string name="league_label">League</string>
    <string name="nationality_label">Nationality</string>
    <string name="position_label">Position</string>
    <string name="search_desc">Search</string>
    <string name="forward_label">Forward</string>
    <string name="midfielder_label">Midfielder</string>
    <string name="defender_label">Defender</string>
    <string name="goalkeeper_label">Goalkeeper</string>
    <array name="initial_rating_values">
        <item>50</item>
        <item>100</item>
    </array>

    <!-- fragment_settings.xml -->
    <string name="theme_label">Theme</string>
    <string name="default_color">Default</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="black">Black</string>
    <string name="dark_mode_label">Dark Mode</string>

    <!-- demo -->
    <array name="demo_list">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
