<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLayout"
    tools:context=".SearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <!-- player name input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/player_name_search"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_name_header"
                app:startIconDrawable="@drawable/players">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    app:endIconMode="clear_text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- rating header -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rating_header" />

            <!-- rating input -->
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rating_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="50"
                android:valueTo="100"
                android:stepSize="1"
                android:layout_marginHorizontal="10dp"
                app:values="@array/initial_rating_values"/>

            <!-- club input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/club_search"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/club_label"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/clubs">
                <AutoCompleteTextView
                    android:id="@+id/club_dropdown_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/club_label"
                    app:simpleItems="@array/demo_list"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- league input -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/league_label"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/league">
                <AutoCompleteTextView
                    android:id="@+id/league_dropdown_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/league_label"
                    app:simpleItems="@array/demo_list"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- nation input -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nationality_label"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/nation">
                <AutoCompleteTextView
                    android:id="@+id/nation_dropdown_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/nationality_label"
                    app:simpleItems="@array/demo_list"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- position header -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/position_label"/>

            <!-- position input -->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:padding="0dp"
                android:scrollbars="none">
                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/position_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/forward_search"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forward_label"
                        android:layout_weight="1"
                        android:padding="20dp"/>
                    <Button
                        android:id="@+id/midfield_search"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/midfielder_label"
                        android:layout_weight="1"
                        android:padding="20dp"/>
                    <Button
                        android:id="@+id/defender_search"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defender_label"
                        android:layout_weight="1"
                        android:padding="20dp"/>
                    <Button
                        android:id="@+id/keeper_search"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goalkeeper_label"
                        android:layout_weight="1"
                        android:padding="20dp"/>
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>

    <!-- submit button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/submit_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        app:srcCompat="@drawable/search"
        android:contentDescription="@string/search_desc" />

</FrameLayout>