<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- trending player header -->
        <TextView
            android:id="@+id/trending_player_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/trending_players_header"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- trending player list -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trending_player_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trending_player_title"
            tools:itemCount="1"
            tools:listitem="@layout/player_list_item" />

        <!-- trending clubs header -->
        <TextView
            android:id="@+id/popular_clubs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/popular_clubs_header"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trending_player_list" />

        <!-- popular clubs list -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_clubs_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_clubs_title"
            tools:itemCount="1"
            tools:listitem="@layout/club_list_item" />

        <!-- discover header -->
        <TextView
            android:id="@+id/discover_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Discover"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_clubs_list" />

        <!-- discover card -->
        <com.google.android.material.card.MaterialCardView
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discover_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/player_photo_discover"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/player_name_discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:text="@string/player_name_list"
                    android:textAppearance="?attr/textAppearanceListItem"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/player_club_discover"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toStartOf="@+id/player_photo_discover"
                    app:layout_constraintTop_toTopOf="@+id/player_photo_discover"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/player_nation_discover"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:layout_constraintBottom_toBottomOf="@+id/player_photo_discover"
                    app:layout_constraintEnd_toStartOf="@+id/player_photo_discover"
                    app:layout_constraintStart_toStartOf="@+id/player_club_discover"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/physical_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="PHY"
                    app:layout_constraintStart_toEndOf="@+id/physical_stat"
                    app:layout_constraintTop_toBottomOf="@+id/defending_label" />

                <TextView
                    android:id="@+id/pace_stat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="99"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/player_name_discover" />

                <TextView
                    android:id="@+id/shooting_stat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:focusable="false"
                    android:text="99"
                    app:layout_constraintEnd_toStartOf="@+id/pace_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pace_stat" />

                <TextView
                    android:id="@+id/passing_stat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="99"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shooting_stat" />

                <TextView
                    android:id="@+id/dribbling_stat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="99"
                    app:layout_constraintStart_toEndOf="@+id/pace_label"
                    app:layout_constraintTop_toBottomOf="@+id/player_name_discover" />

                <TextView
                    android:id="@+id/dribbling_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="DRI"
                    app:layout_constraintStart_toEndOf="@+id/dribbling_stat"
                    app:layout_constraintTop_toBottomOf="@+id/player_name_discover" />

                <TextView
                    android:id="@+id/defending_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="DEF"
                    app:layout_constraintStart_toEndOf="@+id/physical_stat"
                    app:layout_constraintTop_toBottomOf="@+id/dribbling_label" />

                <TextView
                    android:id="@+id/physical_stat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="99"
                    app:layout_constraintStart_toEndOf="@+id/pace_label"
                    app:layout_constraintTop_toBottomOf="@+id/defending_stat" />

                <TextView
                    android:id="@+id/pace_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="PAC"
                    app:layout_constraintStart_toEndOf="@+id/pace_stat"
                    app:layout_constraintTop_toBottomOf="@+id/player_name_discover" />

                <TextView
                    android:id="@+id/defending_stat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="99"
                    app:layout_constraintStart_toEndOf="@+id/pace_label"
                    app:layout_constraintTop_toBottomOf="@+id/dribbling_stat" />

                <TextView
                    android:id="@+id/passing_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="PAS"
                    app:layout_constraintStart_toEndOf="@+id/passing_stat"
                    app:layout_constraintTop_toBottomOf="@+id/shooting_label" />

                <TextView
                    android:id="@+id/shooting_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:text="SHO"
                    app:layout_constraintStart_toEndOf="@+id/shooting_stat"
                    app:layout_constraintTop_toBottomOf="@+id/pace_label" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
